Removed unecessary components

--- a/popup.html
+++ b/popup.html
@@ -4,10 +4,10 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>AutoNote</title>
 </head>
 <body>
-	<h1>Extension test 2:31</h1>
-	<script src="popup.js" type="module"></script>
+	<h1>AutoNote</h1>
+	<p>Feel free to start using the extension. You may be asked to log in automatically.</p>
 </body>
 </html>
